[gd_scene load_steps=11 format=3 uid="uid://dlqyuil05a5mb"]

[ext_resource type="Script" path="res://src/Mixer.gd" id="1_ph3tc"]
[ext_resource type="Texture2D" uid="uid://cefvkg4xdajk7" path="res://res/img/mixer/mixer__empty.png" id="2_ic77w"]
[ext_resource type="AudioStream" uid="uid://dncaw0cw8qng5" path="res://res/sounds/Electric Driller Spin 1.wav" id="3_e2jeo"]
[ext_resource type="AudioStream" uid="uid://b3rkkgbeyedyv" path="res://res/sounds/collision_metal_soft_01.wav" id="4_q32lu"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xvotu"]
a = Vector2(-54, -257)
b = Vector2(22, 130)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3jchw"]
a = Vector2(-361, -509)
b = Vector2(-211, -510)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xqpwp"]
a = Vector2(-328, -772)
b = Vector2(-391, -387)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4gypa"]
a = Vector2(-300, -747)
b = Vector2(-221, -360)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fqphy"]
a = Vector2(-442, -516)
b = Vector2(-299, -514)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5o8nl"]
a = Vector2(-313, -763)
b = Vector2(-372, -387)

[node name="Mixer" type="Node2D"]
script = ExtResource("1_ph3tc")

[node name="MixerSprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ic77w")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RigidBody2D" type="StaticBody2D" parent="."]

[node name="BordG" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(86, 292)
shape = SubResource("SegmentShape2D_xvotu")

[node name="Fond" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(473, 929)
shape = SubResource("SegmentShape2D_3jchw")

[node name="BordDroite" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(653, 802)
shape = SubResource("SegmentShape2D_xqpwp")

[node name="MixArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MixArea"]
position = Vector2(-240, -519)
polygon = PackedVector2Array(339, 925, 499, 919, 541, 615, 296, 617)

[node name="Mix" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e2jeo")
pitch_scale = 1.7

[node name="Collision" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q32lu")

[node name="Bord" type="Area2D" parent="."]

[node name="BordG" type="CollisionShape2D" parent="Bord"]
position = Vector2(340, 779)
shape = SubResource("SegmentShape2D_4gypa")

[node name="Fond" type="CollisionShape2D" parent="Bord"]
position = Vector2(559, 929)
shape = SubResource("SegmentShape2D_fqphy")

[node name="BordDr" type="CollisionShape2D" parent="Bord"]
position = Vector2(630, 789)
shape = SubResource("SegmentShape2D_5o8nl")

[connection signal="body_entered" from="MixArea" to="." method="_on_mix_area_body_entered"]
[connection signal="body_exited" from="MixArea" to="." method="_on_mix_area_body_exited"]
[connection signal="body_entered" from="Bord" to="." method="_on_bord_body_entered"]
